--- a/GradientImageMerge/GradientImageMerge.vcxproj.filters
+++ b/GradientImageMerge/GradientImageMerge.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="lodepng.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="imagewin32.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lodepng.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="imagewin32.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
