--- a/GradientImageMerge/GradientImageMerge.vcxproj.filters
+++ b/GradientImageMerge/GradientImageMerge.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Images">
+      <UniqueIdentifier>{c1bc4dd0-16ac-41bd-bb31-6758758c9333}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GridGraph_2D_4C.h">
@@ -35,5 +38,13 @@
     <ClCompile Include="imagewin32.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="mountains2.png">
+      <Filter>Images</Filter>
+    </Image>
+    <Image Include="mountains3.png">
+      <Filter>Images</Filter>
+    </Image>
   </ItemGroup>
 </Project>
