--- a/GradientImageMerge/GradientImageMerge.vcxproj
+++ b/GradientImageMerge/GradientImageMerge.vcxproj
@@ -128,6 +128,10 @@
     <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="mountains2.png" />
+    <Image Include="mountains3.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
